--- a/assets/styles/scss/styles.scss
+++ b/assets/styles/scss/styles.scss
@@ -93,7 +93,7 @@ h1, h2, h3, .text-black {
 		margin-bottom: 10px;
 	}
 	li {
-		a {
+		button {
 			display: block;
 			padding: 8px 10px;
 			background-color: transparent;
@@ -106,10 +106,10 @@ h1, h2, h3, .text-black {
 				margin-right: 10px;
 			}
 		}
-		a:hover, a.active {
+		button:hover, button.active {
 			background-color: $activeState;
 		}
-		a.active {
+		button.active {
 			.fa-solid {
 				color: $primary;	
 			}
@@ -159,6 +159,9 @@ h1, h2, h3, .text-black {
 		}
 	}
 	.notes-list {
+		> .btn {
+			margin-bottom: 1em;
+		}
 		ul {
 			padding: 0;
 			li {
@@ -175,6 +178,20 @@ h1, h2, h3, .text-black {
 						background-color: $activeState;
 						border-color: transparent;
 					}
+					&.archived {
+						overflow: hidden;
+						opacity: .5;
+						h2, .tags span {
+							text-decoration: line-through;
+						}
+						&::before {
+							content: "\f187";
+							font-family: "Font Awesome 6 Free";
+							font-weight: 900;
+							position: absolute;
+							right: 5px; top: 5px;
+						}
+					}
 					h2 {
 						font-size: 1rem;
 						line-height: 1.25;
@@ -183,7 +200,7 @@ h1, h2, h3, .text-black {
 						display: flex;
 						gap: 1em;
 						margin-block: 1em;
-						li {
+						span {
 							background-color: $gray;
 							padding: 0 5px;
 							border-radius: 3px;
@@ -195,9 +212,7 @@ h1, h2, h3, .text-black {
 						width: 100%; height: 100%;
 					}
 				}
-				&:first-of-type .note {
-					margin-top: 2em;
-				}
+				
 				&:last-of-type .note {
 					border-bottom: none;
 				}
@@ -221,20 +236,28 @@ h1, h2, h3, .text-black {
 				}
 			}
 		}
+		.tag {
+			position: relative;
+		}
 	}
+	
+
 	.selected-note-content {
 		border-top: 1px solid $gray;
 		padding-block: 1em;
-		min-height: 70vh;
+		min-height: 60vh;
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
+		>div {
+			min-height: inherit;
+			padding: 5px;
+		}
+
 		p, li {
 			color: #333;
 		}
-		p {
-			margin-block: 1em;
-		}
+		
 	}
 	.selected-note-footer {
 		border-top: 1px solid $gray;
@@ -254,4 +277,59 @@ h1, h2, h3, .text-black {
 			margin-right: 5px;
 		}
 	}
+}
+
+
+
+///modals
+
+.modal {
+	display: none; /* Hidden by default */
+  	position: fixed;
+  	top: 0;
+  	left: 0;
+  	width: 100%;
+  	height: 100%;
+  	background: rgba(0, 0, 0, 0.5);
+  	justify-content: center;
+  	align-items: center;
+
+  	.modal-content {
+    	background: #fff;
+    	padding: 20px;
+    	border-radius: 8px;
+    	width: 80%;
+    	max-width: 500px;
+    	text-align: center;
+    }
+
+    .close-modal {
+      	position: absolute;
+      	top: 10px;
+      	right: 10px;
+      	cursor: pointer;
+      	font-size: 1.5rem;
+    }
+
+    form {
+      	display: flex;
+      	flex-direction: column;
+      	gap: 10px;
+
+      	input, textarea, button {
+        	width: 100%;
+        	padding: 10px;
+        	font-size: 1rem;
+      	}
+
+      	button {
+        	background: #007bff;
+        	color: #fff;
+        	border: none;
+        	cursor: pointer;
+        	&:hover {
+          		background: #0056b3;
+        	}
+      	}
+    }
 }
